Add macOS build infrastructure for OpenSeaSeis
Forks src/make/linux into src/make/macos with Apple-Clang-compatible
flags, an install_name post-link fixup, and a top-level
make_seaseis_macos.sh driver. Patches three categories of source
incompatibilities so the build runs cleanly under Apple Clang 21:
methods_orientation std::max float-vs-double mismatch, csFileUtils
stat64 (resolved via a platform header shim), and JNI pointer
ordered-comparisons in the segy/seismic/rsf native readers. RAY2D is
removed because the upstream wfront code references csMatrixFStyle
methods that no longer exist; SeaView does not need it.